# SupercellChallenge

./: .gitignore  README.md
challenge2025/example1/: CMakeLists.txt
challenge2025/example2/: README.md
challenge2025/example3/: README.md
collision/: test_texture  test_texture.cpp
collision/collision_basic/: CMakeLists.txt
collision/collision_circle/: CMakeLists.txt
collision/collision_moving/: CMakeLists.txt
collision/collision_multiple/: CMakeLists.txt
collision/collision_sprite/: CMakeLists.txt
current/example1/: CMakeLists.txt
deltatime/deltatime_animation/: CMakeLists.txt
deltatime/deltatime_basic/: CMakeLists.txt
deltatime/deltatime_movement/: CMakeLists.txt
features/: CMakeLists.txt
features/src/: Enemy.cpp  Enemy.h  Hammer.cpp  Hammer.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  main.cpp
gamestate/gamestate_basic/: CMakeLists.txt
gamestate/gamestate_complete/: CMakeLists.txt
gamestate/gamestate_pause/: CMakeLists.txt
idle_clicker/: CMakeLists.txt  README.md
idle_clicker/include/: Button.h  Game.h  Upgrade.h  Utils.h
idle_clicker/src/: Button.cpp  Game.cpp  Upgrade.cpp
input/followMouse/: CMakeLists.txt
merge_game/: CMakeLists.txt  README.md
merge_game/include/: Game.h  Grid.h  Item.h
merge_game/src/: Game.cpp  Grid.cpp  Item.cpp
shooter/shooter_basic/: CMakeLists.txt  CMakeLists_refactored.txt  README.md  README_REFACTORED.md
shooter/shooter_complete/: CMakeLists.txt
shooter/shooter_waves/: CMakeLists.txt
sound/sound_basic/: CMakeLists.txt  test_fps.cpp  test_keys  test_keys.cpp
sound/sound_game/: CMakeLists.txt
sound/sound_music/: CMakeLists.txt
sound/sound_volume/: CMakeLists.txt  test_overlap  test_overlap.cpp
sprite/etc/: making_texture.cpp  sprite_sheet.cpp
sprite/sprite_basic/: build.sh
text/text_basic/: CMakeLists.txt
text/text_score/: CMakeLists.txt
text/text_timer/: CMakeLists.txt
text/text_ui/: CMakeLists.txt
tower_defense/: CMakeLists.txt  README.md
tower_defense/include/: Enemy.h  Game.h  Grid.h  PathFinding.h  (+3 more)
(+96 files in other folders)
